assignment-3. solved the jumping issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,7 @@
     display: flex;
 
     &--hidden {
-      display: none;
+      visibility: hidden;
     }
   }
 
